# ai-matrix-live

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: update.yml
notebooks/: explore_methodology.html  explore_methodology.py
pipeline/: last_release.txt  methodology.py  run.py
pipeline/cache/: country_metadata.json  population.json
site/: astro.config.mjs  package.json
site/public/: land.json
site/public/data/: countries.json  waves.json
site/src/layouts/: Base.astro
site/src/pages/: explore.astro  framework.astro  index.astro  methodology.astro  updates.astro
site/src/styles/: global.css
