[project]
name = "ai-matrix-live"
version = "0.1.0"
description = "Auto-updating global AI adoption dashboard"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.10.1",
    "marimo>=0.23.1",
    "numpy>=2.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pycountry>=26.2.16",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
